Fix buttons spacing and style

--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
+:root{
+    --main-color: rgb(32, 0, 69);
+    --primary-font: 'Black Acute', sans-serif;
+    --secondary-font: 'Roboto', sans-serif;
+}
+
+
+h1 {
+    font-family: var(--primary-font);
+    color: var(--main-color);
+}
+
+h2 {
+    font-family: var(--secondary-font);
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.btn{
+    height: 200px;
+    width: 200px;
+    border-radius:25px;
+    background-color: white;
+    border-color:beige
+}
+
+img {
+    height: 100px;
+    width: 100px;
+    vertical-align: middle;
+}
+
+.choice{
+    font-size: 90px;
+    margin-bottom: 10px;
+}
 
 .flex-container {
     padding: 16px;
@@ -13,7 +53,7 @@
 .flex-item {
     background: peachpuff;
     border: 4px solid salmon;
-    height: 48px;
+    height: 200px;
+    padding: 10px;
     flex: 1;
-    padding: 4px;
 }
